<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_moto_bluetooth_disabled_body">To search for your motorbike you need to enable Bluetooth connection</string>
    <string name="add_moto_bluetooth_disabled_title">Enable Bluetooth connetion</string>
    <string name="add_moto_bluetooth_negative">Cancel</string>
    <string name="add_moto_bluetooth_not_found_body">Unable to find any device</string>
    <string name="add_moto_bluetooth_not_found_positive">Try again</string>
    <string name="add_moto_bluetooth_not_found_title">Oops</string>
    <string name="add_moto_bluetooth_positive_button_activate">Enable</string>
    <string name="add_moto_bluetooth_unknown_description">An error ocurred</string>
    <string name="add_moto_flow_input_hint">Write the code from the Display</string>
    <string name="add_moto_flow_screen_title">My RAY</string>
    <string name="add_moto_flow_search_my_motorcycle">CONNECT MY RAY</string>
    <string name="add_moto_sufix_last_use">h</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="app_name">Ray</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_host">my.ray.eco</string>
    <string name="average_speed">AVERAGE SPEED</string>
    <string name="avoid_highways">Avoid highways</string>
    <string name="avoid_tolls">Avoid Tolls</string>
    <string name="battery">Battery</string>
    <string name="battery_and_charging">BATTERY AND CHARGE</string>
    <string name="battery_autonomy">Range</string>
    <string name="battery_capacity">STATE OF CHARGE</string>
    <string name="battery_capacity_percent">%</string>
    <string name="battery_charge_level">State of charge</string>
    <string name="battery_charge_level_percentage">%</string>
    <string name="battery_charge_now_error">Failed to start charge now</string>
    <string name="battery_charge_now_error_title">Error</string>
    <string name="battery_charge_option_text">How do you want to charge your RAY?</string>
    <string name="battery_charging">Cancel charge</string>
    <string name="battery_charging_charg_until_max_msg" formatted="false">"Regularly charging the battery over 90% could shorten its lifetime.
Regenerative barking is disabled when state of charge is over 90%."</string>
    <string name="battery_charging_edit">Edit</string>
    <string name="battery_charging_info" formatted="false">Regularly charging the battery over 90% could shorten its lifetime. Regenerative braking is disabled when state of charge is over 90%.</string>
    <string name="battery_charging_level">Charge until: %d%%</string>
    <string name="battery_charging_ok">Ok</string>
    <string name="battery_charging_power">Charging speed: %s kW</string>
    <string name="battery_charging_time">Time until target charge</string>
    <string name="battery_instant_charge">CHARGE NOW</string>
    <string name="battery_metric_distance">km</string>
    <string name="battery_personalization_cancel">Cancel</string>
    <string name="battery_personalization_charge_restore">Set Defaults</string>
    <string name="battery_personalization_charge_settings">Charge settings</string>
    <string name="battery_personalization_program_charge_now">Schedule now</string>
    <string name="battery_program_charge">CHARGE SETTINGS</string>
    <string name="ble_connection_notification_message">Waiting for connection.</string>
    <string name="ble_connection_notification_title">Connection</string>
    <string name="ble_connection_service_channel">Bluetooth Connected Device</string>
    <string name="bluetooth_antenna_not_found_description">This app requires Bluetooth connection to function correctly</string>
    <string name="bluetooth_antenna_not_found_title">Seems like your phone does not have Bluetooth connection</string>
    <string name="bluetooth_location_permission_message">The RAY application uses Bluetooth to connect your motorcycle, Please accept the required permissions.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">Change password</string>
    <string name="change_password_not_changed_current">Curret password is incorrect</string>
    <string name="change_password_not_changed_current_and_new_equals">Current password and new password are the same</string>
    <string name="change_password_not_changed_format">The new password must be at least 8 characters long</string>
    <string name="change_password_not_changed_new_repeated">New password and confirmation password do not match</string>
    <string name="change_password_not_changed_title">Error modifying</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charge_schedule_info_message">"Leave your RAY connected at the usual charging point of your choice and indicate a time for automatic charge to start.
Automatic charging will start only if your RAY is nearby the location you selected."</string>
    <string name="charge_setting">CHARGE SETTINGS</string>
    <string name="charge_setting_activate_auto_charge">ACTIVATE AUTO CHARGE</string>
    <string name="charge_setting_charge_power">"Charging speed: "</string>
    <string name="charge_setting_charge_schedule">CHARGE SCHEDULE</string>
    <string name="charge_setting_charge_start_time">Charge start interval</string>
    <string name="charge_setting_charge_start_time_current">Current:</string>
    <string name="charge_setting_charge_start_time_message">Set the time you want your RAY to start charging.</string>
    <string name="charge_setting_charge_until">Charge until:</string>
    <string name="charge_setting_choose_location_message">Search or select a location on the map</string>
    <string name="charge_setting_edit">Edit</string>
    <string name="charge_setting_error_desc">Failed to load charge setting</string>
    <string name="charge_setting_error_title">Charge Setting Error</string>
    <string name="charge_setting_general_setting">GENERAL SETTINGS</string>
    <string name="charge_setting_general_setting_message">Select the charge power and charge limit.</string>
    <string name="charge_setting_main_charge_point">Main charge point</string>
    <string name="charge_setting_main_charge_point_message">Specify the main charge point where automatic charge will take place.</string>
    <string name="charge_setting_save">Save</string>
    <string name="charge_setting_set_defaults">Set Defaults</string>
    <string name="charge_setting_start_charge_time">00:00</string>
    <string name="charge_setting_stop_auto_charge">STOP AUTO CHARGE</string>
    <string name="charged">CHARGING...</string>
    <string name="charger_schedule_location_requred">Please select charging location</string>
    <string name="charger_schedule_time_requred">Please select charge schedule time</string>
    <string name="charging_charge_time">CHARGE TIME</string>
    <string name="charging_power">CHARGING POWER</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_location">Choose location</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="co2_saved">CO2 SAVED</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="configuration_btn_mills">Miles</string>
    <string name="configuration_english">English</string>
    <string name="configuration_spanish">Spanish</string>
    <string name="configurations_title">Configuration</string>
    <string name="connect_my_motorcycle">CONNECT MY RAY</string>
    <string name="connecting">Connecting…</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_web_client_id">204656909138-dmhf02lkib92bt86j9c52h3n8lrab41p.apps.googleusercontent.com</string>
    <string name="destination_arrived">You reached your destination</string>
    <string name="dialog_btn_txt_no">No</string>
    <string name="dialog_btn_txt_ok">OK</string>
    <string name="dialog_btn_txt_yes">Yes</string>
    <string name="dialog_error_title">Error!</string>
    <string name="dialog_future_functionality_description">This is a future functionality.</string>
    <string name="dialog_future_functionality_title">Wait for it.</string>
    <string name="dialog_information_title">Information</string>
    <string name="dialog_internet_error_message">"There's no internet"</string>
    <string name="enter_name">Enter name</string>
    <string name="introduce_a_name_for">Introduce a name for:</string>
    <string name="login_forgot_password_link">Forgot your password?</string>
    <string name="login_log_in_button">Login</string>
    <string name="login_register_button">Sign up</string>
    <string name="profile_change_profile_image">Change profile picture</string>
    <string name="profile_my_garage">MY GARAGE</string>
    <string name="profile_notifications">NOTIFICATIONS</string>
    <string name="profile_settings">SETTINGS</string>
    <string name="profile_user_manual">USER MANUAL</string>
    <string name="real_navigation">Real Navigation</string>
    <string name="save">SAVE</string>
    <string name="screen_label_map_download">Download map</string>
    <string name="screen_label_route_navigation">Navigation</string>
    <string name="screen_label_route_place_search">Search results</string>
    <string name="screen_label_route_search">Route Search</string>
    <string name="screen_label_route_setting">Route settings</string>
    <string name="select_the_type_of_navigation">Select the type of navigation</string>
    <string name="simulation">Simulation</string>
    <string name="statistics_day">DAY</string>
    <string name="statistics_month">MONTH</string>
    <string name="statistics_week">WEEK</string>
</resources>