<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/ray_motorcycle_map_nav_graph" app:startDestination="@id/routeSearch"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/screen_label_route_search" android:name="eco.ray.app.motorcycle.view.route.RouteSearchFragment" android:id="@id/routeSearch">
        <action android:id="@id/navToRoutePlaceSearch" app:destination="@id/routePlaceSearch" />
        <action android:id="@id/navToRouteSetting" app:destination="@id/routeSetting" app:popUpToInclusive="true" />
        <action android:id="@id/navToMapDownload" app:destination="@id/mapDownload" />
        <action android:id="@id/navToRouteNavigation" app:destination="@id/routeNavigation" />
    </fragment>
    <dialog android:label="@string/screen_label_route_place_search" android:name="eco.ray.app.motorcycle.view.route.search.RoutePlaceSearchFragment" android:id="@id/routePlaceSearch" />
    <dialog android:label="@string/screen_label_route_setting" android:name="eco.ray.app.motorcycle.view.route.setting.RouteSettingFragment" android:id="@id/routeSetting" />
    <dialog android:label="@string/screen_label_map_download" android:name="eco.ray.app.motorcycle.view.download.map.DownloadMapFragment" android:id="@id/mapDownload" />
    <dialog android:label="@string/screen_label_route_navigation" android:name="eco.ray.app.motorcycle.view.route.navigate.RouteNavigationFragment" android:id="@id/routeNavigation" />
</navigation>
