<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/tvHeading" android:padding="@dimen/_16sdp" android:text="@string/add_to_favorites" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Text.Heading.ThemeBlack" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/tvMessage" android:paddingBottom="@dimen/_16sdp" android:text="@string/introduce_a_name_for" android:paddingStart="@dimen/_24sdp" android:paddingEnd="@dimen/_24sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvHeading" style="@style/Text.Paragraph.ThemeBlack" />
    <androidx.appcompat.widget.AppCompatEditText android:textColorHint="@color/greyText" android:gravity="center" android:id="@id/etName" android:background="@drawable/outline_1sdp_corner_4sdp_light_grey" android:padding="@dimen/_8sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_name" android:lines="1" android:layout_marginStart="@dimen/_16sdp" android:layout_marginEnd="@dimen/_16sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvMessage" style="@style/Text.Paragraph.ThemeBlack" />
    <View android:id="@id/line1" android:layout_marginTop="@dimen/_16sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/etName" style="@style/HorizontalLine.LightGrey" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/tvCancel" android:background="@drawable/btn_white" android:padding="@dimen/_8sdp" android:layout_width="@dimen/_0dp" android:text="@string/cancel" app:layout_constraintEnd_toStartOf="@id/line2" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/line1" style="@style/Text.Heading.ThemeBlue" />
    <View android:id="@id/line2" android:layout_height="@dimen/_0dp" app:layout_constraintBottom_toBottomOf="@id/tvCancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/tvCancel" style="@style/VerticalLine.LightGrey" />
    <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/tvSave" android:background="@drawable/btn_white" android:padding="@dimen/_8sdp" android:layout_width="@dimen/_0dp" android:text="@string/save" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/line2" app:layout_constraintTop_toBottomOf="@id/line1" style="@style/Text.Heading.ThemeBlue" />
</androidx.constraintlayout.widget.ConstraintLayout>
