<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:tag="layout/fragment_profile_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:bind="http://schemas.android.com/apk/res-auto">
    <include android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/toolbar_margin_top" layout="@layout/fragment_header_toolbar" />
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
    <de.hdodenhof.circleimageview.CircleImageView android:tag="binding_1" android:layout_width="@dimen/profile_image_size" android:layout_height="@dimen/profile_image_size" android:layout_marginBottom="12.0dip" android:src="@drawable/ic_profile" />
    <TextView android:textSize="18.0sp" android:textColor="@android:color/white" android:gravity="center" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="10.0sp" android:textColor="@color/color_blue_marine" android:gravity="center" android:id="@id/btnChangePicture" android:paddingLeft="4.0dip" android:paddingTop="4.0dip" android:paddingRight="4.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" android:text="@string/profile_change_profile_image" android:paddingHorizontal="4.0dip" />
    <Button android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_screen_default" android:layout_marginRight="@dimen/margin_screen_default" android:text="@string/profile_settings" android:layout_marginHorizontal="@dimen/margin_screen_default" style="@style/BorderButton" />
    <Button android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_screen_default" android:layout_marginRight="@dimen/margin_screen_default" android:text="@string/profile_my_garage" android:layout_marginHorizontal="@dimen/margin_screen_default" style="@style/BorderButton" />
    <Button android:textStyle="bold" android:id="@id/btnUserManual" android:tag="binding_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_screen_default" android:layout_marginRight="@dimen/margin_screen_default" android:text="@string/profile_user_manual" android:textAllCaps="true" android:layout_marginHorizontal="@dimen/margin_screen_default" style="@style/BorderButton" />
    <Button android:textStyle="bold" android:tag="binding_6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_screen_default" android:layout_marginRight="@dimen/margin_screen_default" android:text="@string/profile_notifications" android:textAllCaps="true" android:layout_marginHorizontal="@dimen/margin_screen_default" style="@style/BorderButton" />
    <View android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>
