<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/error_dialog_0" android:background="@color/white" android:padding="@dimen/_8sdp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:id="@id/ivIcon" android:layout_width="@dimen/_150sdp" android:layout_height="@dimen/_80sdp" android:src="@drawable/ic_red_warning" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_12ssp" android:gravity="center" android:id="@id/tvTitle" android:padding="@dimen/_8sdp" android:text="@string/select_the_type_of_navigation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/ivIcon" style="@style/Text.Heading.ThemeBlack" />
    <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_12ssp" android:gravity="center" android:id="@id/tvMessage" android:padding="@dimen/_8sdp" android:layout_width="@dimen/_0dp" android:text="@string/simulation" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvTitle" style="@style/Text.Paragraph.Grey" />
    <Button android:textColor="@color/white" android:gravity="center" android:id="@id/btnOk" android:background="@drawable/btn_corner_4sdp_blue" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/_12sdp" android:layout_marginBottom="@dimen/_8sdp" android:minWidth="@dimen/_100sdp" android:text="@string/dialog_btn_txt_ok" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvMessage" style="@style/Button" />
</androidx.constraintlayout.widget.ConstraintLayout>
