<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/fragment_login_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingLeft="@dimen/margin_screen_default" android:paddingRight="@dimen/margin_screen_default" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="@dimen/margin_screen_default">
        <ImageView android:layout_gravity="center" android:id="@id/logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/logo_ray" />
        <Button android:id="@id/logInButton" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_view_large" android:text="@string/login_log_in_button" style="@style/DefaultButton" />
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/forgotPasswordLink" android:tag="binding_2" android:paddingBottom="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@android:color/white" android:id="@id/forgotPassword" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_forgot_password_link" />
            <View android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/margin_view_extra_small" android:layout_marginRight="@dimen/margin_view_extra_small" android:layout_marginHorizontal="@dimen/margin_view_extra_small" />
        </LinearLayout>
        <Button android:id="@id/registerButton" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_view_large" android:text="@string/login_register_button" style="@style/BorderButton" />
    </LinearLayout>
    <View android:tag="binding_4" android:background="@color/black40" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ProgressBar android:layout_gravity="center" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>
