<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_battery_status_header_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_16sdp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.helper.widget.Flow android:layout_width="fill_parent" android:layout_height="wrap_content" app:constraint_referenced_ids="charging,autonomy,chargeTime" app:flow_horizontalAlign="start" app:flow_horizontalBias="0.0" app:flow_maxElementsWrap="3" app:flow_verticalBias="0.0" app:flow_verticalGap="@dimen/_8sdp" app:flow_wrapMode="chain" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/charging" android:background="@drawable/outline_1sdp_corner_4sdp_blue" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/chargingHead" android:layout_width="0.0dip" android:text="@string/battery_charge_level" android:textAllCaps="true" android:paddingStart="@dimen/_8sdp" android:paddingEnd="@dimen/_8sdp" app:layout_constraintEnd_toEndOf="@id/charging" app:layout_constraintStart_toStartOf="@id/charging" app:layout_constraintTop_toTopOf="@id/charging" style="@style/Text.Small.White" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_36ssp" android:id="@id/battery_charge_amount" android:tag="binding_1" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="@id/chargingHead" app:layout_constraintStart_toStartOf="@id/chargingHead" app:layout_constraintTop_toBottomOf="@id/chargingHead" style="@style/Text.Heading.ThemeBlue" />
        <TextView android:id="@id/battery_charge_percentage" android:text="@string/battery_charge_level_percentage" android:layout_marginStart="@dimen/_16sdp" app:layout_constraintBaseline_toBaselineOf="@id/battery_charge_amount" app:layout_constraintStart_toEndOf="@id/battery_charge_amount" style="@style/Text.Small.White" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/autonomy" android:background="@drawable/outline_1sdp_corner_4sdp_blue" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/autonomyHead" android:layout_width="0.0dip" android:text="@string/battery_autonomy" android:textAllCaps="true" android:paddingStart="@dimen/_8sdp" android:paddingEnd="@dimen/_8sdp" app:layout_constraintEnd_toEndOf="@id/autonomy" app:layout_constraintStart_toStartOf="@id/autonomy" app:layout_constraintTop_toTopOf="@id/autonomy" style="@style/Text.Small.White" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_36ssp" android:id="@id/autonomy_amount" android:tag="binding_2" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="@id/autonomyHead" app:layout_constraintStart_toStartOf="@id/autonomyHead" app:layout_constraintTop_toBottomOf="@id/autonomyHead" style="@style/Text.Heading.ThemeBlue" />
        <TextView android:id="@id/autonomy_percentage" android:tag="binding_3" android:layout_marginStart="@dimen/_16sdp" app:layout_constraintBaseline_toBaselineOf="@id/autonomy_amount" app:layout_constraintStart_toEndOf="@id/autonomy_amount" style="@style/Text.Small.White" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/chargeTime" android:background="@drawable/outline_1sdp_corner_4sdp_blue" android:padding="@dimen/_10sdp" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView android:gravity="center" android:id="@id/chargeTimeHead" android:layout_width="0.0dip" android:text="@string/battery_charging_time" android:textAllCaps="true" android:paddingStart="@dimen/_8sdp" android:paddingEnd="@dimen/_8sdp" app:layout_constraintEnd_toEndOf="@id/chargeTime" app:layout_constraintStart_toStartOf="@id/chargeTime" app:layout_constraintTop_toTopOf="@id/chargeTime" style="@style/Text.Small.White" />
        <androidx.appcompat.widget.AppCompatTextView android:textSize="@dimen/_36ssp" android:id="@id/chargeTime_amount" android:tag="binding_4" android:includeFontPadding="false" app:layout_constraintEnd_toEndOf="@id/chargeTimeHead" app:layout_constraintStart_toStartOf="@id/chargeTimeHead" app:layout_constraintTop_toBottomOf="@id/chargeTimeHead" style="@style/Text.Heading.ThemeBlue" />
        <TextView android:id="@id/chargeTime_percentage" android:text="@string/add_moto_sufix_last_use" android:layout_marginStart="@dimen/_16sdp" app:layout_constraintBaseline_toBaselineOf="@id/chargeTime_amount" app:layout_constraintStart_toEndOf="@id/chargeTime_amount" style="@style/Text.Small.White" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
