<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/fragment_statistics_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/headerContainer" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <include android:id="@id/header" layout="@layout/header" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/optionSelectedContainer" android:paddingTop="@dimen/_8sdp" android:paddingBottom="@dimen/_8sdp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/_16sdp" android:paddingEnd="@dimen/_16sdp" app:layout_constraintTop_toBottomOf="@id/headerContainer">
            <View android:id="@id/view" android:background="@color/theme_blue" android:layout_width="@dimen/_16sdp" android:layout_height="@dimen/_16sdp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView android:id="@id/tvSelectedOption" android:tag="binding_3" android:includeFontPadding="false" android:layout_marginStart="@dimen/_12sdp" app:layout_constraintBottom_toBottomOf="@id/view" app:layout_constraintStart_toEndOf="@id/view" app:layout_constraintTop_toTopOf="@id/view" style="@style/Text.Heading.White" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.github.mikephil.charting.charts.BarChart android:id="@id/statisticsChart" android:layout_width="fill_parent" android:layout_height="@dimen/_200sdp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/optionSelectedContainer" />
        <include android:layout_width="fill_parent" android:layout_height="@dimen/_0dp" app:layout_constraintBottom_toTopOf="@id/rgDays" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/statisticsChart" layout="@layout/statistics_options" />
        <RadioGroup android:orientation="horizontal" android:id="@id/rgDays" android:tag="binding_4" android:background="@color/theme_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent">
            <RadioButton android:id="@id/rbDay" android:text="@string/statistics_day" android:foregroundGravity="center" android:layout_marginStart="@dimen/_16sdp" style="@style/Statistics.Day.Button" />
            <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <RadioButton android:id="@id/rbWeek" android:text="@string/statistics_week" style="@style/Statistics.Day.Button" />
            <Space android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <RadioButton android:id="@id/rbMonth" android:text="@string/statistics_month" android:layout_marginEnd="16.0dip" style="@style/Statistics.Day.Button" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:tag="binding_5" android:background="@color/black40" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ProgressBar android:layout_gravity="center" android:id="@id/progressBar" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>
